test/mlir/transpose_bad_case_4.mlir.stderr
test/mlir/transpose_bad_case_4.mlir:3:8: error: 'colgm.transpose' op permutation[2] = 0 is duplicated
  %0 = colgm.transpose %arg {permutation = [0, 1, 0]} : tensor<2x3x4xf32> -> tensor<2x4x3xf32>
       ^
test/mlir/transpose_bad_case_4.mlir:3:8: note: see current operation: %0 = "colgm.transpose"(%arg0) {permutation = [0, 1, 0]} : (tensor<2x3x4xf32>) -> tensor<2x4x3xf32>
